Fix the word "Find" shifting slightly when (?) button changes visibility

--- a/addons/editor-devtools/userscript.css
+++ b/addons/editor-devtools/userscript.css
@@ -389,9 +389,6 @@ div.s3devDDOut.vis ul.s3devDD {
 
 .s3devAction {
   margin-left: 2em;
-  font-size: 12px;
-  font-weight: bold;
-  line-height: 2;
 }
 
 @media screen and (max-width: 1180px) {
